--- a/templates/club_dashboard.html
+++ b/templates/club_dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Club Dashboard - Dunes Basketball</title>
+    <title>Club Dashboard - ryze Basketball</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}?v=20251210">
     <style>
         body {
