Stage and commit all changes via error-check.sh

--- a/templates/login.html
+++ b/templates/login.html
@@ -190,8 +190,8 @@
                 contact@parisbball.fr / password123<br>
                 contact@strasbourg.fr / password123</p>
                 <p><strong>Agents:</strong><br>
-                agent1@france.fr / AgentPass123!<br>
-                agent2@france.fr / AgentPass123!</p>
+                agent1@france.fr / password123<br>
+                agent2@france.fr / password123</p>
                 <p><strong>Players:</strong><br>
                 player1@ryze.fr / password123<br>
                 player2@ryze.fr / password123<br>
